<?xml version="1.0"?>
<package>
  <name>mrp2_bringup</name>
  <version>0.2.4</version>
  <description>Launch files and configurations for starting MRP2 robot in a real environment.</description>
  <maintainer email="akifhno@gmail.com">Akif Hacinecipoglu</maintainer>
  <license>BSD</license>

  <author email="akifhno@gmail.com">Akif Hacinecipoglu</author>
  <url type="website">http://wiki.ros.org/mrp2_bringup</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>mrp2_description</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>twist_mux</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>joy_teleop</run_depend>

</package>
