<?xml version="1.0"?>
<package>
  <name>mrp2_display</name>
  <version>0.2.6</version>
  <description>Package for managing touch LCD panel on MRP2</description>
  <maintainer email="akifhno@gmail.com">Akif Hacinecipoglu</maintainer>
  <license>BSD</license>

  <author email="bolkaraltuntas@gmail.com">Bolkar Altuntas</author>
  <url type="website">http://wiki.ros.org/mrp2_display</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
