<?xml version="1.0"?>
<package>
  <name>mrp2_robot</name>
  <version>0.2.6</version>
  <description>MRP2 robot description and launch files</description>
  <maintainer email="akifhno@gmail.com">Akif Hacinecipoglu</maintainer>
  <license>BSD</license>

  <author email="akifhno@gmail.com">Akif Hacinecipoglu</author>
  <url type="website">http://wiki.ros.org/mrp2_robot</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>mrp2_bringup</run_depend>
  <run_depend>mrp2_display</run_depend>
  <run_depend>mrp2_hardware</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
